Fixed index.html macbook z-index, now uses relative positioning; added footer with credits to icon authors; left navigation on all other pages now fixed; fixed scaling and sizes on transaction boxes (like + date rightside now displays correctly)

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -23,6 +23,7 @@ h1, h2, h3, h4 {
 }
 body {
 	min-width: 900px;
+	overflow-x: hidden;
 }
 
 /* Login Popup */
@@ -143,6 +144,7 @@ input.center-input {
 	padding-top: 80px;
 	display: inline-block;
 	height: 100vh;
+	position: fixed;
 }
 .leftnav ul li {
 	border-top: 1px solid #e6e6e6;
@@ -166,7 +168,7 @@ input.center-input {
 	border-top: 1px solid #e6e6e6;
 	display: inline-block;
 	min-height: 100vh;
-	margin: 80px 0px 100px 40px;
+	margin: 80px 0px 100px 270px;
 	width: 600px;
 	position: absolute;
 	top: 0;
@@ -186,9 +188,12 @@ input.center-input {
 /* transactionBars */
 .transaction {
 	border-top: 1px solid #e6e6e6;
+	/*min-height: 120px;*/
 }
 .transaction-left {
 	width: 78%;
+	min-height: 80px;
+	height: 100%;
 	display: inline-block;
 	padding: 16px 0px 20px 24px;
 }
@@ -198,6 +203,8 @@ input.center-input {
 	height: 80%;
 	display: inline-block;
 	padding: 24px 0 0 0;
+
+	text-align: center;
 
 }
 .transaction-left:hover {
@@ -229,6 +236,7 @@ input.center-input {
 }
 .likable:hover {
 	color: red;
+	cursor: pointer;
 }
 .fa-btc {
 	float: right;
@@ -287,23 +295,23 @@ input.center-input {
 	/*min-height: 80vh;*/
 }
 .home-container {
-	max-width: 900px;
+	width: 900px;
 	margin: auto;
-	padding: 0px 2.5% 0px 2.5%;
-
+	/*padding: 0px 2.5% 0px 2.5%;*/
+	height: 600px;
 }
 .home-right{
-	left: 42%;
-	top: 20%;
 	position: absolute;
 	display: inline-block;
+	margin-left: -50px;
+	margin-right: -300px;
 }
 .macbook {
 	background: url( images/macbook.png) no-repeat center center;
  	-webkit-background-size: cover;
    	-moz-background-size: cover;
   	-o-background-size: cover;
-
+  	margin: -64px 0 0 -2px;
   	height: 438px;
   	width: 765px;
 
@@ -364,9 +372,9 @@ input.center-input {
 	border-bottom: 1px solid #e6e6e6;
 	padding: 0px 2.5% 0px 2.5%;
 	position: fixed;
-	background-color: #fff;
+	background-color: rgba(255, 255, 255, 0.8);
 	top: 0;
-
+	z-index: 99999;
 }
 .nav-inner {
 	max-width: 900px;
@@ -402,8 +410,8 @@ ul.ul-nav li:hover{
 .footer {
 	width: 100%;
 	text-align: center;
-	background-color: #e6e6e6;
+	border-top: 1px solid #e6e6e6;
+
 	line-height: 50px;
-	position: relative;
-	bottom: 0;
+	/*position: relative;*/
 }
